<resources>
    <string name="app_name">Simple Calculator</string>

    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multi">x</string>
    <string name="div">/</string>
    <string name="equal">=</string>
    <string name="negative">+/-</string>
    <string name="decimal">.</string>
    <string name="delete">DEL</string>
    <string name="clear">C</string>

    <string name="tipcalc">TIP</string>
</resources>
