<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <TextView
        android:id="@+id/mainDisplay"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="end|center_vertical"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:columnCount="4"
        android:gravity="center|bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainDisplay">

        <Button
            android:id="@+id/delete"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/delete"
            android:textColor="#F44336"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/clear"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/clear"
            android:textColor="#F44336"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/div"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/div"
            android:textColor="#009688"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/multi"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/multi"
            android:textColor="#009688"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/num7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/num7"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/num8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/num8"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/num9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/num9"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/minus"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/minus"
            android:textColor="#009688"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/num4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/num4"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/num5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/num5"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/num6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/num6"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/plus"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/plus"
            android:textColor="#009688"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/num1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/num1"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/num2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/num2"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/num3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/num3"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/equal"
            android:layout_width="90dp"
            android:layout_height="180dp"
            android:layout_rowSpan="2"
            android:text="@string/equal"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/negative"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/negative"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/num0"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/num0"
            android:textSize="20sp"></Button>

        <Button
            android:id="@+id/decimal"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/decimal"
            android:textSize="20sp"></Button>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>